@startuml
skinparam classAttributeIconSize 0

class Concert {
  - concertId: Long
  - name: String
  - artist: String
}

class Venue {
  - venueId: Long
  - name: String
  - address: String
  - seatCount: int
}

class ConcertDate {
  - concertDateId: Long
  - concertId: Long
  - venueId: Long
  - date: DateTime
}

class User {
  - userId: UUID
  - phone: String
  - createdAt: DateTime
}

class Point {
  - pointId: Long
  - userId: UUID
  - balance: Long
}

class PointHistory {
  - historyId: Long
  - pointId: Long
  - type: String
  - amount: Long
  - createdAt: DateTime
}

class QueueToken {
  - tokenId: String
  - userId: UUID
  - position: int
  - isValid: Boolean
  - issuedAt: DateTime
}

class Reservation {
  - reservationId: UUID
  - userId: UUID
  - reservationDate: Date
  - status: String
  - createdAt: DateTime
}

class Seat {
  - seatId: Long
  - reservationId: UUID
  - concertDateId: Long
  - seatNumber: int
  - seatStatus: String
}

class ReservationItem {
  - reservationId: UUID
  - seatId: Long
}

class Payment {
  - paymentId: UUID
  - reservationId: UUID
  - amount: int
  - paidAt: DateTime
}

Concert "1" -- "0..*" ConcertDate
Venue "1" -- "0..*" ConcertDate
User "1" -- "1" Point
Point "1" -- "0..*" PointHistory
User "1" -- "0..*" QueueToken
User "1" -- "0..*" Reservation
Reservation "1" -- "1..*" ReservationItem
ReservationItem "1" -- "1" Seat
ConcertDate "1" -- "0..*" Seat
Reservation "1" -- "1" Payment
Payment "1" -- "1..*" PointHistory

@enduml